<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/edit_name"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/_16sdp"
        android:id="@+id/tvEditName"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til"
        android:layout_marginTop="@dimen/_10dp"
        app:endIconMode="clear_text"
        android:background="@color/white"
        app:helperText="@string/max_50_words"
        android:hint="@string/user_name"
        app:layout_constraintTop_toBottomOf="@+id/tvEditName">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUserName"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tvEditName"/>
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/save"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til"/>

</androidx.constraintlayout.widget.ConstraintLayout>