<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.forgotpassword.ForgotPasswordActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/back"
            android:layout_marginTop="10dp"
            android:layout_margin="@dimen/dp_15"
            android:id="@+id/backArrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/otp"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYourOtpBelow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/enter_your_otp_below"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOtp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVerifyYourAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/to_verify_your_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvYourOtpBelow" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEnterOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:backgroundTint="@color/black"
                android:hint="@string/enter_otp"
                android:inputType="text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVerifyYourAccount" />
            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_margin="@dimen/_10dp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtEnterOtp"
                 />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="@dimen/dp_170"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/dp_15"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resend_otp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:fontFamily="@font/roboto_mediumitalic"
                android:text="@string/cancel"
                android:textColor="@color/blue_fb"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnNext" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintSignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintRoot">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDonotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/i_donot_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvSignup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signup_"
            android:textColor="@color/blue_fb"
            android:textSize="@dimen/sp_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDonotHaveAccount"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
